--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header>
 	<div>الشعار</div>
-    <div>اسم النظام</div>
+    <div class="sys_name">اسم النظام</div>
     <div class="date"><p><span id="datetime"></span></p>
 </div>
 </header>
