--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css.css">
+	<link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <header>
@@ -45,17 +48,16 @@
 			</a>
 		</li>
 	</ul>
-
-	<div class="search_box">
+</nav>
+<div class="search_box">
 		<div class="by_text">
 			<svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-search fa-w-16 fa-sm"><path fill="currentColor" d="M508.5 481.6l-129-129c-2.3-2.3-5.3-3.5-8.5-3.5h-10.3C395 312 416 262.5 416 208 416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c54.5 0 104-21 141.1-55.2V371c0 3.2 1.3 6.2 3.5 8.5l129 129c4.7 4.7 12.3 4.7 17 0l9.9-9.9c4.7-4.7 4.7-12.3 0-17zM208 384c-97.3 0-176-78.7-176-176S110.7 32 208 32s176 78.7 176 176-78.7 176-176 176z" class=""></path></svg>
 			<input type="search" name="" placeholder="ابحث عن طريق اسم الطالب او رقمه">
 		</div>
 	</div>
-</nav>
-
 
 <h2>كشف الطلاب</h2>
+<div class="table_contener">
 <table>
   <tr>
     <th>الرقم</th>
@@ -180,7 +182,7 @@
 
 
 </table>
-
+</div>
 <div class="select_culam">
 	 
 	  <div class="delate_all">
