--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 </nav>
 <div class="search_box">
 		<div class="by_text">
-			<svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-search fa-w-16 fa-sm"><path fill="currentColor" d="M508.5 481.6l-129-129c-2.3-2.3-5.3-3.5-8.5-3.5h-10.3C395 312 416 262.5 416 208 416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c54.5 0 104-21 141.1-55.2V371c0 3.2 1.3 6.2 3.5 8.5l129 129c4.7 4.7 12.3 4.7 17 0l9.9-9.9c4.7-4.7 4.7-12.3 0-17zM208 384c-97.3 0-176-78.7-176-176S110.7 32 208 32s176 78.7 176 176-78.7 176-176 176z" class=""></path></svg>
+			<button>
+				<span>بحث</span>
+				<svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-search fa-w-16 fa-sm"><path fill="currentColor" d="M508.5 481.6l-129-129c-2.3-2.3-5.3-3.5-8.5-3.5h-10.3C395 312 416 262.5 416 208 416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c54.5 0 104-21 141.1-55.2V371c0 3.2 1.3 6.2 3.5 8.5l129 129c4.7 4.7 12.3 4.7 17 0l9.9-9.9c4.7-4.7 4.7-12.3 0-17zM208 384c-97.3 0-176-78.7-176-176S110.7 32 208 32s176 78.7 176 176-78.7 176-176 176z" class=""></path></svg>
+			</button>
 			<input type="text" name="" placeholder="ابحث عن طريق اسم الطالب او رقمه">
 		</div>
 		<h2>كشف الطلاب</h2>
@@ -184,8 +187,9 @@
 
 </table>
 </div>
+
 <div class="select_culam">
-	 
+	 <div class="edit_student">
 	  <div class="delate_all">
 	  		    <span>مسح الكل</span>
 
@@ -196,11 +200,42 @@
 	    <label for="vehicle1"> تحديد الكل</label>
 	  	<input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
 	  </div>
+	</div>
+
+	<div class="table_navigaion">
+
+<div class="custom-select" style="width:200px; margin-bottom: 1rem">
+  <select style="padding: .7rem">
+    <option value="0">اختر السنة</option>
+    <option value="1">2017</option>
+    <option value="2">2018</option>
+    <option value="3">2019</option>
+    <option value="4">2020</option>
+  </select>
 </div>
+
+	  <div class="pagination_contenier">
+	<div class="pagination">
+  <a href="#">&laquo;</a>
+  <a href="#">1</a>
+  <a class="active" href="#">2</a>
+  <a href="#">3</a>
+  <a href="#">4</a>
+  <a href="#">5</a>
+  <a href="#">6</a>
+  <a href="#">&raquo;</a>
+</div>
+</div>
+
+</div>
+
+</div>
+
+
 <footer></footer>
 <script>
 var dt = new Date();
-  document.getElementById("datetime").innerHTML = (("0"+(dt.getMonth()+1)).slice(-2)) +"/"+ (("0"+dt.getDate()).slice(-2)) +"/"+ (dt.getFullYear()) ;
+  document.getElementById("datetime").innerHTML = (("0"+(dt.getMonth()+1)).slice(-2)) +"/"+ (("0"+dt.getDate()).slice(-2)) +"/"+ (dt.getFullYear()) 
 </script>
 </body>
 </html>
