--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <table>
   <tr>
     <th>الرقم</th>
-    <th>الاسم</th>
+    <th class="st_name">الاسم</th>
     <th>الهاتف</th>
     <th>ولي الامر</th>
     <th>العنوان</th>
