--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <input type="text" name="" placeholder=" البحث عن طريق الرقم ">
     </div>
 
-    <select style="padding: .7rem">
+    <select >
     <option value="0">اختر المدينة </option>
     <option value="1">الرياض </option>
     <option value="2">جدة</option>
